--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,8 @@
   "Основы SQL" на сайте Moscow Coding School
 
   <ul>
-    <li><a href="#">Создать пользователя</a></li>
-    <li><a href="#">Все пользователи</a></li>
-    <li><a href="#">Что-то ещё</a></li>
+    <li><%= link_to 'Создать пользователя', new_user_path %></li>
+    <li><%= link_to 'Все пользователи', users_path %></li>
   </ul>
 </header>
 
