--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Редактировать пользователя</h1>
 
-<%= form_with url: user_path(@user['id']), method: :patch do %>
+<%= form_with url: user_path(@user['id']), data: {method: :patch, remote: false} do %>
   <div>
     <%= label_tag 'name', 'Имя' %>
     <%= text_field_tag 'name', @user['name'], placeholder: 'Вася' %>
