--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
   </ul>
 </header>
 
-<div>
-  <strong>Здесь</strong> после успешных или неуспешных действий (например, создание юзера) может быть выведено сообщение в духе "Пользователь создан!".
-</div>
+<% flash.each do |k, v| %>
+  <%= tag.div v, class: k %>
+<% end %>
 
 <%= yield %>
 
