--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,66 @@
-<h1>Редактировать пользователя</h1>
+<h1 class="main-title">Редактировать пользователя</h1>
 
 <%= form_with url: user_path(@user['id']), data: {remote: false}, method: :patch do %>
-  <div>
-    <%= label_tag 'name', 'Имя' %>
-    <%= text_field_tag 'name', @user['name'], placeholder: 'Вася' %>
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'name', 'Имя', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= text_field_tag 'name', @user['name'], placeholder: 'Вася', class: 'custom-input' %>
+    </div>
   </div>
 
-  <div>
-    <%= label_tag 'surname', 'Фамилия' %>
-    <%= text_field_tag 'surname', @user['surname'], placeholder: 'Пупкин' %>
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'surname', 'Фамилия', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= text_field_tag 'surname', @user['surname'], placeholder: 'Пупкин', class: 'custom-input' %>
+    </div>
   </div>
 
-  <div>
-    <%= label_tag 'age', 'Возраст' %>
-    <%= text_field_tag 'age', @user['age'], placeholder: '33' %>
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'age', 'Возраст', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= text_field_tag 'age', @user['age'], placeholder: '33', class: 'custom-input' %>
+    </div>
   </div>
 
-  <div>
-    <%= label_tag 'city', 'Город' %>
-    <%= text_field_tag 'city', @user['city'], placeholder: 'Москва' %>
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'city', 'Город', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= text_field_tag 'city', @user['city'], placeholder: 'Москва', class: 'custom-input' %>
+    </div>
   </div>
 
-  <%= submit_tag 'Редактировать!' %>
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'university', 'Универ', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= text_field_tag 'university', @user['university'], placeholder: 'МГУ', class: 'custom-input' %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <div class="col-3">
+      <%= label_tag 'language_id', 'Язык', class: 'custom-label' %>
+    </div>
+
+    <div class="col-9">
+      <%= select_tag 'language_id', language_options(@user['language_id'], @languages), class: 'custom-input',
+                     prompt: 'Выберите язык' %>
+    </div>
+  </div>
+
+  <%= submit_tag 'Редактировать!', class: 'btn btn-primary btn-block mt-4' %>
 <% end %>
