--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,28 +6,46 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Press+Start+2P&display=swap&subset=cyrillic" rel="stylesheet">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
-<header>
-  "Основы SQL" на сайте Moscow Coding School
 
-  <ul>
-    <li><%= link_to 'Создать пользователя', new_user_path %></li>
-    <li><%= link_to 'Все пользователи', users_path %></li>
+<nav class="navbar navbar-light bg-light navbar-expand-lg mb-5">
+  <%= link_to 'Друзья по коду', root_path, class: 'navbar-brand mr-auto' %>
+
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <%= link_to 'Создать пользователя', new_user_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Все пользователи', users_path, class: 'nav-link' %>
+    </li>
   </ul>
-</header>
+</nav>
 
-<% flash.each do |k, v| %>
-  <%= tag.div v, class: k %>
-<% end %>
+<div class="container">
+  <% flash.each do |k, v| %>
+    <%= tag.div v, class: "alert alert-#{k}" %>
+  <% end %>
 
-<%= yield %>
+  <%= yield %>
+</div>
 
-<footer>
-  &copy; MCS 2019
+<footer class="mt-5">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        Основы SQL для Moscow Coding School
+      </div>
+
+      <div class="col text-right">
+        &copy; 2019
+      </div>
+    </div>
+  </div>
 </footer>
 
 </body>
