--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div class="col-9">
-      <%= text_field_tag 'name', params[:name], placeholder: 'Вася', class: 'custom-input' %>
+      <%= text_field_tag 'name', params[:name], placeholder: 'Кевин', class: 'custom-input' %>
     </div>
   </div>
 
@@ -19,7 +19,7 @@
     </div>
 
     <div class="col-9">
-      <%= text_field_tag 'surname', params[:surname], placeholder: 'Пупкин', class: 'custom-input' %>
+      <%= text_field_tag 'surname', params[:surname], placeholder: 'Митник', class: 'custom-input' %>
     </div>
   </div>
 
