--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -27,7 +27,8 @@ html {
           rgba(245, 255, 250, 0.78) 39.58%,
           rgba(255, 228, 196, 0.5885) 63.02%,
           #FF6347 100%);
-  min-height: 100%;
+  background-attachment:fixed;
+  //min-height: 100%;
   min-width: 320px;
 }
 
