--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="h-100" lang="ru">
 <head>
   <meta charset="utf-8">
   <title>SocialNetwork</title>
@@ -11,30 +11,32 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 
-<nav class="navbar navbar-light bg-light navbar-expand-lg mb-5">
-  <%= link_to 'Друзья по коду', root_path, class: 'navbar-brand mr-auto' %>
+<main class="flex-shrink-0">
+  <nav class="navbar navbar-light bg-light navbar-expand-lg mb-5">
+    <%= link_to 'Друзья по коду', root_path, class: 'navbar-brand mr-auto' %>
 
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <%= link_to 'Создать пользователя', new_user_path, class: 'nav-link' %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'Все пользователи', users_path, class: 'nav-link' %>
-    </li>
-  </ul>
-</nav>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <%= link_to 'Создать пользователя', new_user_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Все пользователи', users_path, class: 'nav-link' %>
+      </li>
+    </ul>
+  </nav>
 
-<div class="container">
-  <% flash.each do |k, v| %>
-    <%= tag.div v, class: "alert alert-#{k}" %>
-  <% end %>
+  <div class="container">
+    <% flash.each do |k, v| %>
+      <%= tag.div v, class: "alert alert-#{k}" %>
+    <% end %>
 
-  <%= yield %>
-</div>
+    <%= yield %>
+  </div>
+</main>
 
-<footer class="mt-5">
+<footer class="mt-auto py-3">
   <div class="container-fluid">
     <div class="row">
       <div class="col">
